--- a/public/bot.html
+++ b/public/bot.html
@@ -42,7 +42,7 @@
                 <img src="./cat.jpg"><br />
                 <div class="welcome-form-greeting">
                     <p class="welcome-form-greet">Welcome to MintBot</p>
-                    <p class="welcome-form-greeting-text">I'm the virtual representative of Catherine Kim. How should I
+                    <p class="welcome-form-greeting-text">It is the representative of Emina Ramovic. How should I
                         address you?</p>
                     <section class="welcome-input">
                         <input type="text" id="name-input" maxlength="35">
