--- a/public/bot.html
+++ b/public/bot.html
@@ -6,11 +6,11 @@
     <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
     <meta name="image" property="og:image" content="./img.png">
     <meta name="author" content="Emina Ramovic">
+    <meta name="title" property="og:title" content="MintBot">
     <meta name="description" property="og:description" content="MintBot allows you to utilize a JSON-parsed version of your resume to have a chat bot speak to recruiters and potential employers. MintBot takes on your persona, and will converse with recruiters to provide specific information taken from your resume.">
     <script type="text/javascript" src="resume.json"></script>
     <script src="../features/bot.js"></script>
     <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="shortcut icon" type="image/png" href="./img.png">
     <link rel="shortcut icon" type="image/png" href="./fav.png">
 
     <!-- google fonts -->
