--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="shortcut icon" type="image/png" href="./fav.png">
  <script src="https://kit.fontawesome.com/1ca929ab33.js" crossorigin="anonymous"></script>
+  <meta name="image" property="og:image" content="./img.png">
+  <meta name="author" content="Emina Ramovic">
+  <meta name="title" property="og:title" content="MintBot">
+  <meta name="description" property="og:description" content="MintBot allows you to utilize a JSON-parsed version of your resume to have a chat bot speak to recruiters and potential employers. MintBot takes on your persona, and will converse with recruiters to provide specific information taken from your resume.">
 </head>
 
 <body id="landing-body" style="margin: 0px 0px 0px 0px;">
